--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -506,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "strings = TRAIN_LAB_DF['Cell Type'].unique()"
@@ -527,7 +529,9 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "TRAIN_LAB_DF['num'] = pd.Series([l2n[x] for x in TRAIN_LAB_DF['Cell Type']], index=TRAIN_LAB_DF.index)"
@@ -536,7 +540,9 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "TRAIN_LAB_DF.to_csv(path_or_buf='../data/train_observed_labels_new.tsv',sep='\\t',index=False)"
@@ -545,7 +551,9 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "TRAIN_LAB_DF = pd.read_csv(os.path.join(INPUT_PATH, 'train_observed_labels_new.tsv'), sep='\\t')"
@@ -1344,7 +1352,9 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import random"
@@ -1353,7 +1363,9 @@
   {
    "cell_type": "code",
    "execution_count": 495,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# sanity check, unique mapping\n",
@@ -1380,7 +1392,9 @@
   {
    "cell_type": "code",
    "execution_count": 497,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
