--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -306,25 +306,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 645,  216,   93,  283,   16,  409,  180,  415,   80,  273,   76,\n",
-       "        449,   36,   86,   24,  696,  798,  523,  514, 1432,  160,   50,\n",
-       "         93,  144, 1011,  257,  142,  425,  250,   63,  340,  141, 1096,\n",
-       "        287, 1609,  882, 1430,  400,   51,  846,  224,  205,  103, 3667,\n",
-       "        171,   98])"
+       "Cell Type\n",
+       "CL:0000037 hematopoietic stem cell                645\n",
+       "CL:0000057 fibroblast                             216\n",
+       "CL:0000081 blood cell                              93\n",
+       "CL:0000084 T cell                                 283\n",
+       "CL:0000127 astrocyte                               16\n",
+       "CL:0000137 osteocyte                              409\n",
+       "CL:0000163 endocrine cell                         180\n",
+       "CL:0000169 type B pancreatic cell                 415\n",
+       "CL:0000192 smooth muscle cell                      80\n",
+       "CL:0000235 macrophage                             273\n",
+       "CL:0000353 blastoderm cell                         76\n",
+       "CL:0000540 neuron                                 449\n",
+       "CL:0000746 cardiac muscle cell                     36\n",
+       "CL:0000763 myeloid cell                            86\n",
+       "CL:0001056 dendritic cell, human                   24\n",
+       "CL:0002033 short term hematopoietic stem cell     696\n",
+       "CL:0002034 long term hematopoietic stem cell      798\n",
+       "CL:0002319 neural cell                            523\n",
+       "CL:0002321 embryonic cell                         514\n",
+       "CL:0002322 embryonic stem cell                   1432\n",
+       "CL:0002365 medullary thymic epithelial cell       160\n",
+       "CL:0008019 mesenchymal cell                        50\n",
+       "CL:1000497 kidney cell                             93\n",
+       "UBERON:0000007 pituitary gland                    144\n",
+       "UBERON:0000044 dorsal root ganglion              1011\n",
+       "UBERON:0000045 ganglion                           257\n",
+       "UBERON:0000115 lung epithelium                    142\n",
+       "UBERON:0000473 testis                             425\n",
+       "UBERON:0000922 embryo                             250\n",
+       "UBERON:0000955 brain                               63\n",
+       "UBERON:0000966 retina                             340\n",
+       "UBERON:0000992 female gonad                       141\n",
+       "UBERON:0001003 skin epidermis                    1096\n",
+       "UBERON:0001264 pancreas                           287\n",
+       "UBERON:0001851 cortex                            1609\n",
+       "UBERON:0001891 midbrain                           882\n",
+       "UBERON:0001898 hypothalamus                      1430\n",
+       "UBERON:0001902 epithelium of small intestine      400\n",
+       "UBERON:0001954 Ammon's horn                        51\n",
+       "UBERON:0001997 olfactory epithelium               846\n",
+       "UBERON:0002038 substantia nigra                   224\n",
+       "UBERON:0002048 lung                               205\n",
+       "UBERON:0002107 liver                              103\n",
+       "UBERON:0002435 striatum                          3667\n",
+       "UBERON:0004129 growth plate cartilage             171\n",
+       "UBERON:0010743 meningeal cluster                   98\n",
+       "Name: Cell Type, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 502,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "cells_counts"
+   ]
   },
   {
    "cell_type": "code",
@@ -516,6 +561,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 504,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 504,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l2n['UBERON:0002435 striatum']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 121,
    "metadata": {
     "collapsed": true
@@ -561,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [
     {
@@ -905,13 +970,13 @@
        "[21389 rows x 1 columns]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 501,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "TRAIN_LAB_DF"
+    "TRAIN_LAB_DF."
    ]
   },
   {
