--- a/train_rf.ipynb
+++ b/train_rf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data_test = np.load('../data/test_data.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -46,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.323036750059\n"
+      "0.323047415126\n"
      ]
     }
    ],
@@ -63,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +130,7 @@
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -133,16 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.90708783662745562"
+       "0.90756553412551499"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -185,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -196,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -239,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.28737613097802672"
+       "0.28780697975010772"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +279,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save('../pred_svm_val.npy', pred_v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = pca.transform(data_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pred_test = cls.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('../pred_svm_test.npy', pred_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -268,54 +346,54 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      0.18      0.30        39\n",
-      "          1       1.00      0.03      0.06        96\n",
-      "          2       0.84      0.94      0.89       207\n",
-      "          3       0.01      0.75      0.03        16\n",
-      "          4       0.14      1.00      0.24        10\n",
-      "          5       0.14      0.93      0.24        15\n",
-      "          6       1.00      1.00      1.00         3\n",
+      "          0       1.00      0.13      0.23        39\n",
+      "          1       1.00      0.29      0.45        96\n",
+      "          2       1.00      0.22      0.36       207\n",
+      "          3       0.01      0.75      0.02        16\n",
+      "          4       0.67      1.00      0.80        10\n",
+      "          5       0.33      0.87      0.47        15\n",
+      "          6       0.75      1.00      0.86         3\n",
       "          7       0.00      0.00      0.00         8\n",
-      "          8       0.00      0.00      0.00         6\n",
-      "          9       0.65      0.88      0.75        83\n",
-      "         10       0.68      0.40      0.50        67\n",
-      "         11       0.75      0.63      0.69        71\n",
+      "          8       0.33      0.33      0.33         6\n",
+      "          9       0.75      0.92      0.83        83\n",
+      "         10       0.73      0.78      0.75        67\n",
+      "         11       0.71      0.80      0.75        71\n",
       "         12       0.00      0.00      0.00         9\n",
       "         13       0.00      0.00      0.00        49\n",
       "         14       0.00      0.00      0.00      1006\n",
       "         15       1.00      1.00      1.00        16\n",
       "         16       0.00      0.00      0.00       423\n",
-      "         17       0.94      1.00      0.97        15\n",
+      "         17       1.00      1.00      1.00        15\n",
       "         18       0.00      0.00      0.00       235\n",
       "         19       0.00      0.00      0.00        66\n",
-      "         20       0.86      0.34      0.49        35\n",
-      "         21       0.58      0.97      0.73       143\n",
-      "         22       0.50      0.10      0.17        10\n",
-      "         23       0.85      1.00      0.92        52\n",
+      "         20       0.81      0.37      0.51        35\n",
+      "         21       0.68      0.99      0.80       143\n",
+      "         22       0.07      0.50      0.13        10\n",
+      "         23       1.00      1.00      1.00        52\n",
       "         24       0.00      0.00      0.00       507\n",
-      "         25       1.00      1.00      1.00        18\n",
-      "         26       0.11      0.97      0.20        95\n",
-      "         27       1.00      0.75      0.86        16\n",
+      "         25       0.90      1.00      0.95        18\n",
+      "         26       0.19      0.98      0.32        95\n",
+      "         27       0.26      1.00      0.42        16\n",
       "         28       1.00      1.00      1.00        15\n",
-      "         29       0.82      1.00      0.90         9\n",
-      "         30       1.00      0.08      0.15       288\n",
-      "         31       0.10      1.00      0.18        26\n",
-      "         32       0.05      0.75      0.10         8\n",
+      "         29       1.00      0.67      0.80         9\n",
+      "         30       0.00      0.00      0.00       288\n",
+      "         31       0.13      1.00      0.23        26\n",
+      "         32       1.00      0.25      0.40         8\n",
       "         33       0.00      0.00      0.00         1\n",
-      "         34       0.53      0.44      0.48        18\n",
-      "         35       0.44      1.00      0.62         4\n",
-      "         36       1.00      1.00      1.00        34\n",
-      "         37       0.70      0.93      0.80       367\n",
-      "         38       0.11      1.00      0.20        10\n",
+      "         34       0.11      0.94      0.20        18\n",
+      "         35       1.00      1.00      1.00         4\n",
+      "         36       0.79      1.00      0.88        34\n",
+      "         37       0.35      1.00      0.52       367\n",
+      "         38       0.10      0.80      0.17        10\n",
       "         39       1.00      0.01      0.02       406\n",
-      "         40       0.06      1.00      0.12        26\n",
-      "         41       1.00      0.86      0.93        29\n",
+      "         40       0.14      0.92      0.24        26\n",
+      "         41       0.91      1.00      0.95        29\n",
       "         42       0.00      0.00      0.00         8\n",
-      "         43       0.73      1.00      0.84        40\n",
-      "         44       0.45      0.31      0.37        29\n",
-      "         45       0.67      0.75      0.71         8\n",
+      "         43       1.00      1.00      1.00        40\n",
+      "         44       0.41      0.31      0.35        29\n",
+      "         45       0.46      0.75      0.57         8\n",
       "\n",
-      "avg / total       0.39      0.29      0.24      4642\n",
+      "avg / total       0.31      0.27      0.20      4642\n",
       "\n"
      ]
     }
@@ -379,18 +457,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
   }
  },
  "nbformat": 4,
