--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -1489,11 +1489,355 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cell Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>UBERON:0002107 liver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>UBERON:0002107 liver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>UBERON:0002107 liver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>UBERON:0002107 liver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>UBERON:0002107 liver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>UBERON:0002107 liver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>UBERON:0002107 liver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>CL:0000353 blastoderm cell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21359</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21360</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21361</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21362</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21363</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21364</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21365</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21366</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21367</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21368</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21369</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21370</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21371</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21372</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21373</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21374</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21375</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21376</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21377</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21378</th>\n",
+       "      <td>UBERON:0000955 brain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21379</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21380</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21381</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21382</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21383</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21384</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21385</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21386</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21387</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21388</th>\n",
+       "      <td>UBERON:0001851 cortex</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21389 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Cell Type\n",
+       "0      CL:0000353 blastoderm cell\n",
+       "1      CL:0000353 blastoderm cell\n",
+       "2      CL:0000353 blastoderm cell\n",
+       "3      CL:0000353 blastoderm cell\n",
+       "4      CL:0000353 blastoderm cell\n",
+       "5      CL:0000353 blastoderm cell\n",
+       "6            UBERON:0002107 liver\n",
+       "7            UBERON:0002107 liver\n",
+       "8            UBERON:0002107 liver\n",
+       "9            UBERON:0002107 liver\n",
+       "10           UBERON:0002107 liver\n",
+       "11           UBERON:0002107 liver\n",
+       "12           UBERON:0002107 liver\n",
+       "13     CL:0000353 blastoderm cell\n",
+       "14     CL:0000353 blastoderm cell\n",
+       "15     CL:0000353 blastoderm cell\n",
+       "16     CL:0000353 blastoderm cell\n",
+       "17     CL:0000353 blastoderm cell\n",
+       "18     CL:0000353 blastoderm cell\n",
+       "19     CL:0000353 blastoderm cell\n",
+       "20     CL:0000353 blastoderm cell\n",
+       "21     CL:0000353 blastoderm cell\n",
+       "22     CL:0000353 blastoderm cell\n",
+       "23     CL:0000353 blastoderm cell\n",
+       "24     CL:0000353 blastoderm cell\n",
+       "25     CL:0000353 blastoderm cell\n",
+       "26     CL:0000353 blastoderm cell\n",
+       "27     CL:0000353 blastoderm cell\n",
+       "28     CL:0000353 blastoderm cell\n",
+       "29     CL:0000353 blastoderm cell\n",
+       "...                           ...\n",
+       "21359        UBERON:0000955 brain\n",
+       "21360        UBERON:0000955 brain\n",
+       "21361        UBERON:0000955 brain\n",
+       "21362        UBERON:0000955 brain\n",
+       "21363        UBERON:0000955 brain\n",
+       "21364        UBERON:0000955 brain\n",
+       "21365        UBERON:0000955 brain\n",
+       "21366        UBERON:0000955 brain\n",
+       "21367        UBERON:0000955 brain\n",
+       "21368        UBERON:0000955 brain\n",
+       "21369        UBERON:0000955 brain\n",
+       "21370        UBERON:0000955 brain\n",
+       "21371        UBERON:0000955 brain\n",
+       "21372        UBERON:0000955 brain\n",
+       "21373        UBERON:0000955 brain\n",
+       "21374        UBERON:0000955 brain\n",
+       "21375        UBERON:0000955 brain\n",
+       "21376        UBERON:0000955 brain\n",
+       "21377        UBERON:0000955 brain\n",
+       "21378        UBERON:0000955 brain\n",
+       "21379       UBERON:0001851 cortex\n",
+       "21380       UBERON:0001851 cortex\n",
+       "21381       UBERON:0001851 cortex\n",
+       "21382       UBERON:0001851 cortex\n",
+       "21383       UBERON:0001851 cortex\n",
+       "21384       UBERON:0001851 cortex\n",
+       "21385       UBERON:0001851 cortex\n",
+       "21386       UBERON:0001851 cortex\n",
+       "21387       UBERON:0001851 cortex\n",
+       "21388       UBERON:0001851 cortex\n",
+       "\n",
+       "[21389 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "TRAIN_LAB_DF"
    ]
